OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Optimum_Only__c.field-meta.xml
<CustomField>
    <fullName>Optimum_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, this checkbox automatically restricts Chuzo user interface experience site tabs to the Optimum Buyflow only. [PER-4389]</description>
    <label>Optimum Only</label>
    <type>Checkbox</type>
</CustomField>