OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Order_Info__c.field-meta.xml
<CustomField>
    <fullName>Order_Info__c</fullName>
    <label>Order Info</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>