OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Outside_BB_BDM__c.field-meta.xml
<CustomField>
    <fullName>Outside_BB_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outside BB BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User2</relationshipName>
    <type>Lookup</type>
</CustomField>