OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Over_120__c.field-meta.xml
<CustomField>
    <fullName>Over_120__c</fullName>
    <label>* Over 120</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>