OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Over_30__c.field-meta.xml
<CustomField>
    <fullName>Over_30__c</fullName>
    <label>* Over 30</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>