OnboardingV2Minimal/force-app/main/default/objects/Account/fields/P10_Buydown_Date__c.field-meta.xml
<CustomField>
    <fullName>P10_Buydown_Date__c</fullName>
    <label>Buydown Date</label>
    <type>Date</type>
</CustomField>