OnboardingV2Minimal/force-app/main/default/objects/Account/fields/P10_Invoice_Account__c.field-meta.xml
<CustomField>
    <fullName>P10_Invoice_Account__c</fullName>
    <externalId>true</externalId>
    <label>Account #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>