OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Paid_Search__c.field-meta.xml
<CustomField>
    <fullName>Paid_Search__c</fullName>
    <label>SEM- Search Engine Marketing Monthly Bud</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>