OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Paid_Search_Approved__c.field-meta.xml
<CustomField>
    <fullName>Paid_Search_Approved__c</fullName>
    <label>SEM- Search Engine Marketing Reviewed</label>
    <type>Date</type>
</CustomField>