OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Past_Due_1_30__c.field-meta.xml
<CustomField>
    <fullName>Past_Due_1_30__c</fullName>
    <label>* Past Due 1-30</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>