OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>* Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CreditAcct</fullName>
            </value>
            <value>
                <fullName>LC60</fullName>
            </value>
            <value>
                <fullName>N01</fullName>
            </value>
            <value>
                <fullName>N05</fullName>
            </value>
            <value>
                <fullName>N10</fullName>
            </value>
            <value>
                <fullName>N15</fullName>
            </value>
            <value>
                <fullName>N20</fullName>
            </value>
            <value>
                <fullName>N30</fullName>
            </value>
            <value>
                <fullName>N45</fullName>
            </value>
            <value>
                <fullName>N60</fullName>
            </value>
            <value>
                <fullName>N90</fullName>
            </value>
            <value>
                <fullName>Prepay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>