OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Pending_Co_op_Balance__c.field-meta.xml
<CustomField>
    <fullName>Pending_Co_op_Balance__c</fullName>
    <description>Co-op that is currently Pending</description>
    <label>AT&amp;T Video Available Co-op Balance</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>