OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_Active_In_SF__c.field-meta.xml
<CustomField>
    <fullName>POE_Active_In_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active In SF?</label>
    <type>Checkbox</type>
</CustomField>