OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_Bonus_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>POE_Bonus_Start_Date__c</fullName>
    <label>Bonus Start Date</label>
    <type>Date</type>
</CustomField>