OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>POE_Dealer_Code__c</fullName>
    <label>Dealer Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>