OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_Dealer_Office_Email__c.field-meta.xml
<CustomField>
    <fullName>POE_Dealer_Office_Email__c</fullName>
    <label>Dealer Office Email</label>
    <type>Email</type>
</CustomField>