OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_Espanol_Package__c.field-meta.xml
<CustomField>
    <fullName>POE_Espanol_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Dealer is able to sell packages in Español or not.</description>
    <label>Español Package</label>
    <type>Checkbox</type>
</CustomField>