OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_FSL_Dates_Enabled__c.field-meta.xml
<CustomField>
    <fullName>POE_FSL_Dates_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSL Dates Enabled</label>
    <type>Checkbox</type>
</CustomField>