OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_ICL_Owner__c.field-meta.xml
<CustomField>
    <fullName>POE_ICL_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Owner)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>