OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_Office_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>POE_Office_Close_Date__c</fullName>
    <label>Dealer Office Close Date</label>
    <type>Date</type>
</CustomField>