OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>POE_Point_of_Contact__c</fullName>
    <label>Point of Contact</label>
    <length>40</length>
    <type>Text</type>
</CustomField>