OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_Programs_available__c.field-meta.xml
<CustomField>
    <fullName>POE_Programs_available__c</fullName>
    <label>Programs available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AT&amp;T</fullName>
                <isActive>false</isActive>
                <label>AT&amp;T</label>
            </value>
            <value>
                <fullName>Brightspeed</fullName>
            </value>
            <value>
                <fullName>Brinks</fullName>
                <isActive>false</isActive>
                <label>Brinks</label>
            </value>
            <value>
                <fullName>DirecTV</fullName>
                <label>DIRECTV</label>
            </value>
            <value>
                <fullName>EarthLink</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Altice</fullName>
                <label>Optimum</label>
            </value>
            <value>
                <fullName>Spectrum API</fullName>
                <label>Spectrum</label>
            </value>
            <value>
                <fullName>Charter/Spectrum</fullName>
                <isActive>false</isActive>
                <label>Spectrum DEPRECATED</label>
            </value>
            <value>
                <fullName>Viasat</fullName>
                <isActive>false</isActive>
                <label>Viasat</label>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>