OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_Require_TPV__c.field-meta.xml
<CustomField>
    <fullName>POE_Require_TPV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags the account so that Representatives require TPV on the buyflows.</description>
    <label>Require TPV</label>
    <type>Checkbox</type>
</CustomField>