OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_Spectrum_AffiliateId__c.field-meta.xml
<CustomField>
    <fullName>POE_Spectrum_AffiliateId__c</fullName>
    <description>Affiliate ID used for Spectrum</description>
    <label>Spectrum AffiliateId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>