OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>POE_Status_Reason__c</fullName>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Moving (to a different state)</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Leaving Business</fullName>
            </value>
            <value>
                <fullName>On a Re-Train</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Leaving the business - Personal</fullName>
            </value>
            <value>
                <fullName>Leaving the business - Financial</fullName>
            </value>
            <value>
                <fullName>Changing Business Name</fullName>
            </value>
            <value>
                <fullName>Performance Issue</fullName>
            </value>
            <value>
                <fullName>Retrain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>