OnboardingV2Minimal/force-app/main/default/objects/Account/fields/POE_Store_Number__c.field-meta.xml
<CustomField>
    <fullName>POE_Store_Number__c</fullName>
    <description>Store number for Retailers</description>
    <label>Store Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>