OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Preferred_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Contact_Time__c</fullName>
    <description>PER-3836</description>
    <label>Preferred Contact Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>