OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Previous_Month_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Accessories__c</fullName>
    <label>* Accessory Sales Prior Month</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>