OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Previous_Month_Commercial_PVA__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_Commercial_PVA__c</fullName>
    <label>* DTV-COM Prior Month</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>