OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Previous_Month_LSP_PVA__c.field-meta.xml
<CustomField>
    <fullName>Previous_Month_LSP_PVA__c</fullName>
    <label>* AT&amp;T Video Prior Month</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>