OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Primary_Sales_Tactic__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sales_Tactic__c</fullName>
    <label>Primary Sales Tactic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>D2D</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>ISP</fullName>
            </value>
            <value>
                <fullName>Kiosk</fullName>
                <label>Storefront / Kiosk</label>
            </value>
            <value>
                <fullName>Retail</fullName>
                <label>Short Term Retail</label>
            </value>
            <value>
                <fullName>Utility Partnership</fullName>
                <label>Utility/ Service Partnership</label>
            </value>
            <value>
                <fullName>National Retail</fullName>
            </value>
            <value>
                <fullName>SOHO</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>MDU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>