OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Principal_Owner_Changed__c.field-meta.xml
<CustomField>
    <fullName>Principal_Owner_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Principal Owner Changed</label>
    <type>Checkbox</type>
</CustomField>