OnboardingV2Minimal/force-app/main/default/objects/Account/fields/ProgramBase_Activated_Count__c.field-meta.xml
<CustomField>
    <fullName>ProgramBase_Activated_Count__c</fullName>
    <label>ProgramBase Activated Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>