OnboardingV2Minimal/force-app/main/default/objects/Account/fields/ProgramBase_Sent_Count__c.field-meta.xml
<CustomField>
    <fullName>ProgramBase_Sent_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ProgramBase Sent Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>