OnboardingV2Minimal/force-app/main/default/objects/Account/fields/PV_Offshore_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>PV_Offshore_Approved_Date__c</fullName>
    <label>PV Offshore Approved Date</label>
    <type>Date</type>
</CustomField>