OnboardingV2Minimal/force-app/main/default/objects/Account/fields/PV_Offshore_Approved_Location__c.field-meta.xml
<CustomField>
    <fullName>PV_Offshore_Approved_Location__c</fullName>
    <label>PV Offshore Approved Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>