OnboardingV2Minimal/force-app/main/default/objects/Account/fields/QWEST_CORP_ID__c.field-meta.xml
<CustomField>
    <fullName>QWEST_CORP_ID__c</fullName>
    <description>Qwest (CLINK) Corp ID for this account</description>
    <label>* QWEST-CORP ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>