OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Program Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>CATV</fullName>
            </value>
            <value>
                <fullName>CCT</fullName>
            </value>
            <value>
                <fullName>CEN</fullName>
                <color>#0B6FCE</color>
                <label>CEN</label>
            </value>
            <value>
                <fullName>COLR</fullName>
            </value>
            <value>
                <fullName>D2D</fullName>
            </value>
            <value>
                <fullName>DOMR-Domestic</fullName>
            </value>
            <value>
                <fullName>DTV/HSP/RSP</fullName>
            </value>
            <value>
                <fullName>ESR</fullName>
                <color>#E27001</color>
                <label>ESR</label>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>HSP</fullName>
            </value>
            <value>
                <fullName>Mass Merch</fullName>
            </value>
            <value>
                <fullName>MDUR</fullName>
            </value>
            <value>
                <fullName>NAT</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>WES</fullName>
                <color>#78C953</color>
                <label>WES</label>
            </value>
            <value>
                <fullName>PHS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>