OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Regional_COM_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Regional_COM_Mgr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional COM Mgr</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User11</relationshipName>
    <type>Lookup</type>
</CustomField>