OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Resale__c.field-meta.xml
<CustomField>
    <fullName>Resale__c</fullName>
    <label>Resale</label>
    <length>15</length>
    <type>Text</type>
</CustomField>