OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Self_Install_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Self_Install_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the user can have Self Install for Frontier [PER-5882}</description>
    <label>Frontier Self Install Allowed</label>
    <type>Checkbox</type>
</CustomField>