OnboardingV2Minimal/force-app/main/default/objects/Account/fields/SEM_Discuss_Search_Engine_Marketing__c.field-meta.xml
<CustomField>
    <fullName>SEM_Discuss_Search_Engine_Marketing__c</fullName>
    <label>SEM- Discuss Search Engine Marketing</label>
    <type>Date</type>
</CustomField>