OnboardingV2Minimal/force-app/main/default/objects/Account/fields/SEM_Discuss_Trade_Mark_Auth__c.field-meta.xml
<CustomField>
    <fullName>SEM_Discuss_Trade_Mark_Auth__c</fullName>
    <label>SEM- Discuss Trade Mark Auth</label>
    <type>Date</type>
</CustomField>