OnboardingV2Minimal/force-app/main/default/objects/Account/fields/SEO_Discuss_Business_Website__c.field-meta.xml
<CustomField>
    <fullName>SEO_Discuss_Business_Website__c</fullName>
    <label>SEO- Discuss Business Website</label>
    <type>Date</type>
</CustomField>