OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Shipping_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Line_2__c</fullName>
    <description>Shipping Address Line 2 entered in the buyflow</description>
    <label>Shipping Address Line 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>