OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Shipping_Notes__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Notes__c</fullName>
    <label>Shipping Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>