OnboardingV2Minimal/force-app/main/default/objects/Account/fields/ShopLink_Email__c.field-meta.xml
<CustomField>
    <fullName>ShopLink_Email__c</fullName>
    <label>ShopLink Email</label>
    <type>Email</type>
</CustomField>