OnboardingV2Minimal/force-app/main/default/objects/Account/fields/ShopLink_Programs__c.field-meta.xml
<CustomField>
    <fullName>ShopLink_Programs__c</fullName>
    <label>ShopLink Programs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Chuzo_Programs</valueSetName>
    </valueSet>
</CustomField>