OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Show_Frontier_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Show_Frontier_Onboarding__c</fullName>
    <formula>IF(
  AND(
    NDA_Activated_Count__c &gt; 0,
    Credit_Check_Activated_Count__c &gt; 0,
    Baackground_Check_Activated_Count__c &gt; 0,
    Frontier_Vendor_Count__c = 0
  ),
  1,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Frontier Onboarding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>