OnboardingV2Minimal/force-app/main/default/objects/Account/fields/SMM_Discuss_Social_Media_Paid_Ads__c.field-meta.xml
<CustomField>
    <fullName>SMM_Discuss_Social_Media_Paid_Ads__c</fullName>
    <label>SMM- Discuss Social Media Paid Ads</label>
    <type>Date</type>
</CustomField>