OnboardingV2Minimal/force-app/main/default/objects/Account/fields/SMM_Paid_Ad_Type__c.field-meta.xml
<CustomField>
    <fullName>SMM_Paid_Ad_Type__c</fullName>
    <label>SMM- Paid Ad Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Branded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>