OnboardingV2Minimal/force-app/main/default/objects/Account/fields/SMO_Discuss_Social_Media_Business_Page__c.field-meta.xml
<CustomField>
    <fullName>SMO_Discuss_Social_Media_Business_Page__c</fullName>
    <label>SMO- Discuss Social Media Business Page</label>
    <type>Date</type>
</CustomField>