OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Social_Media__c</fullName>
    <label>SMM- Paid Ad Campaign Monthly Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>