OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Social_Media_Approved__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Approved__c</fullName>
    <label>Social Media Campaigns Reviewed</label>
    <type>Date</type>
</CustomField>