OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Social_Media_Pages__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Pages__c</fullName>
    <label>SMO- Social Media Pages</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>