OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Spectrum_Only__c.field-meta.xml
<CustomField>
    <fullName>Spectrum_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, this checkbox restricts Chuzo user interface to automatically restrict Chuzo user interface experience site tabs. [PER-3090]</description>
    <label>Spectrum Only</label>
    <type>Checkbox</type>
</CustomField>