OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Stopped__c.field-meta.xml
<CustomField>
    <fullName>Stopped__c</fullName>
    <label>* Stopped</label>
    <length>20</length>
    <type>Text</type>
</CustomField>