OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Telco_BDM__c.field-meta.xml
<CustomField>
    <fullName>Telco_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Telco BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User6</relationshipName>
    <type>Lookup</type>
</CustomField>