OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Telco_Footprint__c.field-meta.xml
<CustomField>
    <fullName>Telco_Footprint__c</fullName>
    <label>Telco Footprint</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATT</fullName>
            </value>
            <value>
                <fullName>CenturyLink</fullName>
            </value>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Windstream</fullName>
            </value>
            <value>
                <fullName>Viasat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>