OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <label>Terms</label>
    <length>15</length>
    <type>Text</type>
</CustomField>