OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Program Territory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ABW</fullName>
            </value>
            <value>
                <fullName>AFG</fullName>
            </value>
            <value>
                <fullName>AGO</fullName>
            </value>
            <value>
                <fullName>AIA</fullName>
            </value>
            <value>
                <fullName>AKW</fullName>
            </value>
            <value>
                <fullName>ALA</fullName>
            </value>
            <value>
                <fullName>ALB</fullName>
            </value>
            <value>
                <fullName>ALM</fullName>
            </value>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>ANT</fullName>
            </value>
            <value>
                <fullName>ARE</fullName>
            </value>
            <value>
                <fullName>ARG</fullName>
            </value>
            <value>
                <fullName>ARGDTVLATA</fullName>
            </value>
            <value>
                <fullName>ARM</fullName>
            </value>
            <value>
                <fullName>ASM</fullName>
            </value>
            <value>
                <fullName>ATG</fullName>
            </value>
            <value>
                <fullName>ATX</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>AUT</fullName>
            </value>
            <value>
                <fullName>AZE</fullName>
            </value>
            <value>
                <fullName>BDI</fullName>
            </value>
            <value>
                <fullName>BEL</fullName>
            </value>
            <value>
                <fullName>BEN</fullName>
            </value>
            <value>
                <fullName>BFA</fullName>
            </value>
            <value>
                <fullName>BGD</fullName>
            </value>
            <value>
                <fullName>BGR</fullName>
            </value>
            <value>
                <fullName>BHR</fullName>
            </value>
            <value>
                <fullName>BHS</fullName>
            </value>
            <value>
                <fullName>BIH</fullName>
            </value>
            <value>
                <fullName>BLM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>