OnboardingV2Minimal/force-app/main/default/objects/Account/fields/TMZ_Login_sent_to_email__c.field-meta.xml
<CustomField>
    <fullName>TMZ_Login_sent_to_email__c</fullName>
    <label>TMZ Login sent to email:</label>
    <type>Email</type>
</CustomField>