OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Total_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Due__c</fullName>
    <label>* Total Due</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>