OnboardingV2Minimal/force-app/main/default/objects/Account/fields/Traditional__c.field-meta.xml
<CustomField>
    <fullName>Traditional__c</fullName>
    <label>Marketing Monthly Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>